# trading-agents

./: .codeqlignore  .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  desktop.ini  docker-compose.yml  pyproject.toml  run_codeql_ast.ps1
.claude/: settings.json
.claude/agents/: librarian.md  tuner.md
.claude/commands/: check-api.md  progress.md  where.md
.github/: agents.md  codeql-config.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: build-images.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  security-findings.yml
agents/: __init__.py
agents/analyst/: Dockerfile  __init__.py  agent.py  entrypoint.py  held_universe.py  mission.md  poll.py  provider_client.py  result.py  run.py  settings.py  settings_indicators.py  store.py
agents/curator/: Dockerfile  __init__.py  agent.py  agent_support.py  dataset_store.py  entrypoint.py  mission.md  predictor.py  promotion.py  settings.py  store.py
agents/execution/: Dockerfile  __init__.py  agent.py  alpaca.py  alpaca_positions.py  broker.py  broker_factory.py  entrypoint.py  live_gate.py  mission.md  order_status_store.py  poll.py  realized_pnl.py  reconciliation.py  reconciliation_store.py  run.py  settings.py  stage_flow.py  store.py
agents/forecaster/: Dockerfile  __init__.py  agent.py  comparison.py  entrypoint.py  factor_prediction.py  factor_signal.py  finbert.py  lightgbm_model.py  mission.md  model.py  model_trainer.py  poll.py  (+5 more)
alembic/: env.py
codeql/: INDEX.md  README.md
contracts/: __init__.py  analyst.py  common.py  curator.py  execution.py  feed_notes.py  forecaster.py  master.py  monitor.py  operator.py  pnl.py  portfolio_manager.py  positions.py  provider.py  reporter.py  researcher.py  resume.py  scanner.py  stop_rule.py  supervisor.py
docs/: INDEX.md  PRD.md  STATE-01.md  STATE-02.md  STATE-03.md  STATE-04.md  STATE-05.md  STATE.md  agent-message-chain.md  architecture.md  build-plan.md  ci-cd-setup.md  codeql-local-tooling.md  configuration.md  deployment.md  design-log.md  error-handling.md  hardening-backlog.md  ideas.md  moonshots.md  observability.md  repo-hygiene.md  sprint-loop.md  technology-stack.md
infra/: aura.ps1  container-apps.bicep  deploy-agents.ps1  deploy.sh  fleet-graph.ps1  grant-key-vault-seeder.ps1  main.bicep  observability.bicep  parameters.json  servicebus.bicep  setup-azure.ps1  setup-container-apps.ps1  setup-github-ci.ps1  setup-grafana-datasource.ps1  setup-prometheus-auth.ps1  status.ps1  ta.ps1
kernel/: __init__.py  agent.py  bootstrap.py  bus.py  bus_azure.py  bus_azure_config.py  bus_azure_receiver.py  bus_celery.py  bus_celery_config.py  claim_check.py  config.py  contract.py  crypto.py  deliberation.py  deliberation_eval.py  deliberation_gate.py  deliberation_prompt_artifacts.py  deliberation_prompts.py  deliberation_understanding.py  dspy_optimizer.py  envelope.py  errors.py  fault_graph.py  graph.py  graph_cypher.py  graph_env.py  graph_memory.py  graph_neo4j.py  graph_neo4j_config.py  graph_neo4j_queries.py  graph_postgres.py  graph_postgres_config.py  graph_postgres_queries.py  graph_support.py  llm.py  market_pack.py  metrics.py  metrics_prometheus.py  optimizer.py  persistence.py  (+4 more)
models/: README.md
ops/: INDEX.md  README.md  agent-genesis.md  org-map.md  scenarios.md  subsystem-map.md
orchestration/: Dockerfile  __init__.py  __init__.pyi  batch_trace.py  bindings.py  deploy_record.py  dispatcher.py  lineage.py  local_pipeline.py  master_serve.py  narratives.py  observatory.py  resume.py  run_outcome.py  scheduled_dispatch.py  scheduler.py  settings.py  start.py  steps.py  trace_format.py  trigger.py  veto.py  veto_context.py  veto_context_pm.py
probes/: __init__.py  __main__.py  checks.py  creds.py
scripts/: accept.py  backtest_proposal.py  backtest_proposal_report.py  check_module_header.py  check_module_size.py  check_untracked_secrets.py  codeql_errors.py  compare_aura.py  compare_deliberation_prompts.py  compile_deliberation_prompts.py  cred_audit.py  cred_audit_azure.py  cred_audit_plan.py  deliberate.py  deliberation_challenger_prompt.json  deliberation_defender_prompt.json  deliberation_eval.py  deliberation_gate.py  deliberation_golden.json  deliberation_judge_prompt.json  dispatch_scheduled_run.py  evaluate_return_model.py  export_tiingo_bars.py  gate_selftest.py  gate_selftest_cases.py  generate_codeql_reports.ps1  mine_factors.py  mine_factors_prompt.py  neo4j_crud.py  observatory.py  pg_provision_roles.py  pg_role_plan.py  pg_teardown.py  price_csv.py  record_deploy.py  remediation_gate.py  remediation_selector_golden.json  repair_close_pnl.py  retrain_return_model.py  retrain_return_model_helpers.py  (+26 more)
security/: findings-baseline.json
surfaces/: __init__.py  __main__.py  cli.py  cli_commands.py  cli_commands_extra.py  cli_commands_queries.py  context.py  entrypoint.py  mcp_server.py  mcp_tools.py  metrics_server.py  operator_tools.py  render.py  render_extras.py  render_review.py
tests/: bus_azure_receiver_helpers.py  graph_neo4j_fakes.py  graph_postgres_fakes.py  test_accept_cli.py  test_agent_image_commands.py  test_backtest_proposal.py  test_bootstrap.py  test_boundary_map.py  test_bus.py  test_bus_azure.py  test_bus_azure_config.py  test_bus_azure_receiver.py  test_bus_azure_receiver_edges.py  test_bus_azure_receiver_integration.py  test_bus_celery.py  test_bus_pubsub.py  test_claim_check.py  test_config.py  test_contract_values.py  test_cred_audit_plan.py  test_crypto.py  test_deliberate_script.py  test_deliberation.py  test_deliberation_eval.py  test_deliberation_gate.py  test_deliberation_prompt_artifacts.py  test_deliberation_prompt_pipeline.py  test_deliberation_understanding.py  test_dispatch_scheduled_run.py  test_entrypoints.py  test_errors.py  test_evaluate_return_model.py  test_export_tiingo_bars.py  test_factor_signal_parity.py  test_fault_graph.py  test_graph.py  test_graph_backend_rigor.py  test_graph_env.py  test_graph_neo4j.py  test_graph_postgres.py  (+25 more)
(+882 files in other folders)
