[project]
name = "trading-agents"
version = "0.10.0"
description = "An operator-controlled, single-user, agent-based trading system. Domain logic lives only in agents; the kernel is plumbing; contracts are the shared boundary."
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.scripts]
trading-agents-mcp = "surfaces.mcp_server:main"

[project.optional-dependencies]
# Runtime substrate — only the orchestration layer and live agents pull these in.
runtime = [
    "celery>=5.4",
    "redis>=5.0",
    "neo4j>=5.20",
    "prometheus-client>=0.20",
]
# Also pinned in the dev group so CI type-checks the MCP surface.
mcp = ["mcp>=1.28.0"]
# Forecaster ML models (FinBERT sentiment + LightGBM price/return) — heavy, lazily
# imported; the unit gate never loads them.
forecaster = ["torch>=2.12.1", "transformers>=4", "lightgbm>=4"]
# Azure Service Bus pub/sub backend (P14). Install to activate AzureServiceBusBus.
azure = ["azure-servicebus>=7.12"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "celery>=5.4",
    "import-linter>=2.0",
    "mypy>=1.10",
    "mcp>=1.28.0",
    "ruff>=0.15.17",
    "pip-audit>=2.10.1",
    "detect-secrets>=1.5",
    "neo4j>=5.20",
    "prometheus-client>=0.20",
    "pre-commit>=3.7",
]

[tool.uv]
# Multi-package workspace resolved on PYTHONPATH; do not build/install the root.
package = false

# ── Ruff: same rule set and format as the reference project ───────────────────
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["kernel", "contracts", "agents", "orchestration", "surfaces", "tests"]
extend-exclude = []

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "S", "A", "C4", "DTZ", "T20",
    "PT", "RUF", "ANN", "D", "TCH", "PIE", "RET", "ARG", "ERA",
]
# A005: agents are intentionally named after domain roles (e.g. `operator`); they
# are always imported as qualified submodules, never as the top-level stdlib name.
ignore = ["D100", "D104", "D203", "D213", "S101", "A005"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D", "ARG", "T20"]
"agents/**/tests/**/*.py" = ["S101", "ANN", "D", "ARG", "T20"]
"orchestration/tests/**/*.py" = ["S101", "ANN", "D", "ARG", "T20"]
"surfaces/tests/**/*.py" = ["S101", "ANN", "D", "ARG", "T20"]
"agents/**/__init__.py" = ["D"]
# probes/ are real-system health checks: they print a report, catch-all to report
# RED (never raise), and share a uniform (creds) signature.
"probes/**" = ["T20", "BLE001", "ARG001"]
# scripts/ are CLI tools: they intentionally print to stdout and carry module-level
# docstrings that double as --help text; RUF010 conversions add noise without value.
"scripts/**/*.py" = ["T20", "D", "RUF010"]
# contracts/ are typed DTOs: the fields, capability summaries, and mission docs
# are the documentation. Class/nested-class docstrings are not required here.
"contracts/**" = ["D101", "D106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# Pydantic evaluates annotations at runtime, so imports used only in model fields
# must stay at module scope (not moved into a TYPE_CHECKING block).
runtime-evaluated-base-classes = ["pydantic.BaseModel", "contracts.common._Frozen"]

[tool.ruff.lint.isort]
known-first-party = ["kernel", "contracts", "agents", "orchestration", "surfaces"]

# ── Standalone isort fallback (matches ruff's I-rule settings above) ──────────
# isort is not a project dependency and the ms-python.isort VS Code extension
# is disabled. This section exists solely so that any accidental invocation of
# standalone isort produces output compatible with what ruff expects.
[tool.isort]
profile = "black"
known_first_party = ["kernel", "contracts", "agents", "orchestration", "surfaces"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Mypy: strict, same as the reference project ───────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "celery", "celery.*", "redis", "redis.*", "neo4j", "neo4j.*",
    "prometheus_client", "azure.servicebus",
]
follow_imports = "skip"
ignore_missing_imports = true

# ── Pytest + coverage ratchet, same shape as the reference project ────────────
[tool.pytest.ini_options]
testpaths = ["tests", "agents", "orchestration", "surfaces"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=kernel",
    "--cov=contracts",
    "--cov=agents",
    "--cov=orchestration",
    "--cov=surfaces",
    "--cov-report=term-missing",
    "--cov-report=html",
    # Regression-ratchet floor: the current measured floor. Climb; never lower.
    "--cov-fail-under=100.00",
    "--no-header",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests that touch a database or external systems",
    "live: marks tests that require live local services or external systems",
    "llm_qualification: live model API probe - requires provider API keys",
]
asyncio_mode = "auto"
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["kernel", "contracts", "agents", "orchestration", "surfaces"]
branch = true
omit = ["*/migrations/*", "*/__main__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true
precision = 2
fail_under = 100.00
