[project]
name = "trading-agents"
version = "0.74.01"
description = "An operator-controlled, single-user, agent-based trading system. Domain logic lives only in agents; the kernel is plumbing; contracts are the shared boundary."
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0",
    "msgpack>=1.2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
trading-agents-mcp = "surfaces.mcp_server:main"

[project.optional-dependencies]
# Runtime substrate — only the orchestration layer and live agents pull these in.
runtime = [
    "celery>=5.4",
    "redis>=8.0.1",
    "psycopg[binary]>=3.3.4",
    "prometheus-client>=0.20",
]
# PostgreSQL spine migration tooling. Runtime graph access uses the runtime extra.
postgres = ["alembic>=1.13"]
# Also pinned in the dev group so CI type-checks the MCP surface.
mcp = ["mcp>=1.28.1"]
# Forecaster ML models (FinBERT sentiment + LightGBM price/return) — heavy, lazily
# imported; the unit gate never loads them.
forecaster = ["torch>=2.13.0", "transformers>=5.14.1", "lightgbm>=4.7.0"]
# LLM provider SDKs — lazily imported (operator client + deliberation demo). Install
# to run anything against a live model: `uv pip install anthropic openai`.
llm = ["anthropic>=0.117.0", "openai>=2.46.0"]
# Azure Service Bus pub/sub backend (P14). Install to activate AzureServiceBusBus.
# azure-keyvault-secrets + azure-identity: master Key Vault accessor (P15 S75).
azure = [
    "azure-servicebus>=7.12",
    "azure-keyvault-secrets>=4.8",
    "azure-identity>=1.16",
]
optimizer = [
    "dspy>=3.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "celery>=5.4",
    "import-linter>=2.13",
    "mypy>=2.3.0",
    "mcp>=1.28.1",
    "ruff>=0.15.22",
    "pip-audit>=2.10.1",
    "detect-secrets>=1.5",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.13",
    "prometheus-client>=0.20",
    "pre-commit>=4.6.1",
    "mutmut>=3.6.0",
]

[tool.uv]
# Multi-package workspace resolved on PYTHONPATH; do not build/install the root.
package = false

[tool.mutmut]
# Sprint 132 manual mutation exercise. Keep this out of `make ci`; rerun after a
# stable sprint, or when decision-engine gate logic changes in these paths.
source_paths = ["kernel", "contracts", "agents", "orchestration", "scripts"]
only_mutate = [
    "agents/analyst/domain/*.py",
    "agents/portfolio_manager/*.py",
    "agents/portfolio_manager/domain/*.py",
    "agents/scanner/*.py",
    "agents/scanner/domain/*.py",
    "agents/execution/*.py",
    "agents/execution/domain/*.py",
    "scripts/accept.py",
    "orchestration/packs/trading_acceptance.py",
    "orchestration/veto*.py",
]
do_not_mutate = [
    "agents/**/tests/*.py",
    "orchestration/tests/*.py",
]
pytest_add_cli_args = ["--no-cov", "-m", "not llm_qualification and not live"]
pytest_add_cli_args_test_selection = [
    "agents/analyst/tests",
    "agents/portfolio_manager/tests",
    "agents/scanner/tests",
    "agents/execution/tests",
    "orchestration/tests",
    "tests",
]
mutate_only_covered_lines = false
timeout_multiplier = 15.0
timeout_constant = 1.0

# torch: CPU wheels only. No container or dev box has a GPU; the default Linux
# wheel drags in multi-GB NVIDIA CUDA libraries and made the forecaster image
# build 10-25x slower than every other agent image (4.6-8.1 min vs ~0.4 min).
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# ── Ruff: same rule set and format as the reference project ───────────────────
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["kernel", "contracts", "agents", "orchestration", "surfaces", "tests"]
extend-exclude = []

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "S", "A", "C4", "DTZ", "T20",
    "PT", "RUF", "ANN", "D", "TCH", "PIE", "RET", "ARG", "ERA",
]
# A005: agents are intentionally named after domain roles (e.g. `operator`); they
# are always imported as qualified submodules, never as the top-level stdlib name.
ignore = ["D100", "D104", "D203", "D213", "S101", "A005"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D", "ARG", "T20"]
"agents/**/tests/**/*.py" = ["S101", "ANN", "D", "ARG", "T20"]
"orchestration/tests/**/*.py" = ["S101", "ANN", "D", "ARG", "T20"]
"surfaces/tests/**/*.py" = ["S101", "ANN", "D", "ARG", "T20"]
"agents/**/__init__.py" = ["D"]
# probes/ are real-system health checks: they print a report, catch-all to report
# RED (never raise), and share a uniform (creds) signature.
"probes/**" = ["T20", "BLE001", "ARG001"]
# scripts/ are CLI tools: they intentionally print to stdout and carry module-level
# docstrings that double as --help text; RUF010 conversions add noise without value.
"scripts/**/*.py" = ["T20", "D", "RUF010"]
# codeql/scripts/ are CLI tools too (moved from scripts/): same intentional prints.
"codeql/scripts/**/*.py" = ["T20", "D", "RUF010"]
# batch_trace.py is a print-to-stdout diagnostic; T20 is intentional.
"orchestration/batch_trace.py" = ["T20"]
# contracts/ are typed DTOs: the fields, capability summaries, and mission docs
# are the documentation. Class/nested-class docstrings are not required here.
"contracts/**" = ["D101", "D106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# Pydantic evaluates annotations at runtime, so imports used only in model fields
# must stay at module scope (not moved into a TYPE_CHECKING block).
runtime-evaluated-base-classes = ["pydantic.BaseModel", "contracts.common._Frozen"]

[tool.ruff.lint.isort]
known-first-party = ["kernel", "contracts", "agents", "orchestration", "surfaces"]

# ── Standalone isort fallback (matches ruff's I-rule settings above) ──────────
# isort is not a project dependency and the ms-python.isort VS Code extension
# is disabled. This section exists solely so that any accidental invocation of
# standalone isort produces output compatible with what ruff expects.
[tool.isort]
profile = "black"
known_first_party = ["kernel", "contracts", "agents", "orchestration", "surfaces"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Mypy: strict, same as the reference project ───────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "celery", "celery.*", "redis", "redis.*",
    "prometheus_client", "azure.servicebus",
    "azure.keyvault", "azure.keyvault.*", "azure.identity", "azure.identity.*",
    "azure.core", "azure.core.*",
]
follow_imports = "skip"
ignore_missing_imports = true

# ── Pytest + coverage ratchet, same shape as the reference project ────────────
[tool.pytest.ini_options]
testpaths = ["tests", "agents", "orchestration", "surfaces"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=kernel",
    "--cov=contracts",
    "--cov=agents",
    "--cov=orchestration",
    "--cov=surfaces",
    "--cov-report=term-missing",
    "--cov-report=html",
    # Regression-ratchet floor: the current measured floor. Climb; never lower.
    "--cov-fail-under=100.00",
    "--no-header",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests that touch a database or external systems",
    "live: marks tests that require live local services or external systems",
    "llm_qualification: live model API probe - requires provider API keys",
]
asyncio_mode = "auto"
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["kernel", "contracts", "agents", "orchestration", "surfaces"]
branch = true
omit = ["*/migrations/*", "*/__main__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true
precision = 2
fail_under = 100.00
